fix code snippets font size on mobile

--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -350,6 +350,10 @@ blockquote
     code
       padding: .8em 1em
 
+@media only screen and (max-width : 480px)
+  .highlight pre
+    font-size: 12px
+
 /* pygments style: friendly
 .highlight
   // color: black
